src/test/ui/span/issue-24805-dropck-trait-has-items.stderr
error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-trait-has-items.rs:47:27
   |
47 |     _d = D_HasSelfMethod(&d1);
   |                           ^^ borrowed value does not live long enough
48 | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-trait-has-items.rs:53:34
   |
53 |     _d = D_HasMethodWithSelfArg(&d1);
   |                                  ^^ borrowed value does not live long enough
54 | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-trait-has-items.rs:59:21
   |
59 |     _d = D_HasType(&d1);
   |                     ^^ borrowed value does not live long enough
60 | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 3 previous errors

